traduction, modal, test unitaire

--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -1,8 +1,42 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-{{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
-    {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="{{ 'registration.submit'|trans }}" />
-    </div>
+{% block fos_user_content %}
+<div id="signup">
+  {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'form'}}) }}
+    <p class="fieldset">
+      <label class="image-replace email" for="signup-email">E-mail</label>
+      {{ form_widget(form.email, {'attr': {'class': 'full-width has-padding has-border', 'id': 'signup-email', 'placeholder': 'E-mail'}}) }}
+      <span class="error-message">Enter a valid email address!</span>
+    </p>
+
+    <p class="fieldset">
+      <label class="image-replace username" for="signup-username">Username</label>
+      {{ form_widget(form.username, {'attr': {'class': 'full-width has-padding has-border', 'id': 'signup-username', 'placeholder': 'Username'}}) }}
+      <span class="error-message">Your username can only contain numeric and alphabetic symbols!</span>
+    </p>
+
+    <p class="fieldset">
+      <label class="image-replace password" for="signup-password">Password</label>
+      {{ form_widget(form.plainPassword.first, {'attr': {'class': 'full-width has-padding has-border', 'id': 'signup-password', 'placeholder': 'Password'}}) }}
+      <a href="#0" class="hide-password">Show</a>
+      <span class="error-message">Your password has to be at least 6 characters long!</span>
+    </p>
+
+    <p class="fieldset">
+      <label class="image-replace password" for="signup-password">Password verification</label>
+      {{ form_widget(form.plainPassword.second, {'attr': {'class': 'full-width has-padding has-border', 'id': 'signup-password', 'placeholder': 'Password again'}}) }}
+      <a href="#0" class="hide-password">Show</a>
+      <span class="error-message">Your password has to be at least 6 characters long!</span>
+    </p>
+
+    <p class="fieldset">
+      <label class="image-replace" for="picture">Avatar</label>
+      {{ form_widget(form.picture, {'attr': {'class': 'btn btn-info'}}) }}
+    </p>
+
+    <p class="fieldset">
+      <input class="full-width has-padding" type="submit" value="{{ 'registration.submit'|trans }}">
+    </p>
 {{ form_end(form) }}
+</div>
+{% endblock fos_user_content %}
