--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,4 +1,3 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
 
 {% trans_default_domain 'FOSUserBundle' %}
 
@@ -7,16 +6,29 @@
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
 
-<form action="{{ path("fos_user_security_check") }}" method="post">
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+  <div id="login">
+    <form class="form" action="{{ path("fos_user_security_check") }}" method="post">
+      <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+      <p class="fieldset">
+        <label class="image-replace email" for="username">{{ 'security.login.username'|trans }}</label>
+        <input class="full-width has-padding has-border" name="_username" id="signin-email" placeholder="E-mail or Username" required="required">
+      </p>
 
-    <label for="username">{{ 'security.login.username'|trans }}</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+      <p class="fieldset">
+        <label class="image-replace password" for="password">{{ 'security.login.password'|trans }}</label>
+        <input class="full-width has-padding has-border" name="_password" id="signin-password" type="password"  placeholder="Password" required="required">
+        <a href="#0" class="hide-password">Show</a>
+      </p>
 
-    <label for="password">{{ 'security.login.password'|trans }}</label>
-    <input type="password" id="password" name="_password" required="required" />
+      <p class="fieldset">
+        <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+        <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+      </p>
 
-    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
-
+      <p class="fieldset">
+        <input class="full-width" type="submit" value="Login">
+      </p>
+      <p class="form-bottom-message"><a href="#0">Forgot your password?</a></p>
+    </form>
+  </div>
 {% endblock fos_user_content %}
