--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -23,7 +23,8 @@
 
       <div class="col-md-8">
         {% block body %}{% endblock %}
-        {% block fos_user_content %}{% endblock %}
+        {% block fos_user_content %}
+        {% endblock %}
         {% block fos_message_content %}{% endblock %}
         {% block javascripts %}{% endblock %}
       </div>
@@ -39,6 +40,7 @@
     'http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'
     'http://code.jquery.com/ui/1.11.4/jquery-ui.min.js'
     'js/carousel.js'
+    'js/formModal.js'
   %}
   <script type="text/javascript" src="{{ asset_url }}"></script>
   <script type="text/javascript">
