--- a/app/Resources/views/episode/new.html.twig
+++ b/app/Resources/views/episode/new.html.twig
@@ -1,16 +1,47 @@
 {% extends 'base.html.twig' %}
 
+{% block panel %} <!-- surcharge du block panel gauche -->
+  <ul class="nav nav-pills nav-stacked mt22p">
+    <li class="active">
+      <a href="/">{{ 'serie.show.home'|trans }}</a>
+    </li>
+    <li>
+      <a data-toggle="tab" href="{{ path('serie_index') }}">{{ 'serie.show.back_list'|trans }}</a>
+    </li>
+  </ul>
+{% endblock %}
+
 {% block body %}
-    <h1>Episode creation</h1>
-
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
-    {{ form_end(form) }}
-
-    <ul>
-        <li>
-            <a href="{{ path('episode_index') }}">Back to the list</a>
-        </li>
-    </ul>
+  <h1>{{ 'episode.new.new'|trans }}</h1>
+  <hr>
+  {{ form_start(form, {'attr': {'class': 'form'}}) }}
+  <div class="form-group">
+    <label for="title" class="control-label col-sm-2">{{ 'episode.new.title'|trans }}</label>
+    <div class="col-sm-10 mb20p">
+      {{ form_widget(form.title, {'attr': {'class': 'form-control input-sm'}}) }}
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="resume" class="control-label col-sm-2">{{ 'episode.new.resume'|trans }}</label>
+    <div class="col-sm-10 mb20p">
+      {{ form_widget(form.resume, {'attr': {'class': 'form-control input-sm'}}) }}
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="season" class="control-label col-sm-2">{{ 'episode.new.season_number'|trans }}</label>
+    <div class="col-sm-10 mb20p">
+      {{ form_widget(form.season, {'attr': {'class': 'form-control input-sm'}}) }}
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="episode_number" class="control-label col-sm-2">{{ 'episode.new.episode_number'|trans }}</label>
+    <div class="col-sm-10 mb20p">
+      {{ form_widget(form.episodeNumber, {'attr': {'class': 'form-control input-sm'}}) }}
+    </div>
+  </div>
+  <div class="col-sm-12 mb20p">
+    {{ form_widget(form) }}
+    <input type="submit" class="flt-r" value="&nbsp;&nbsp;{{ 'serie.new.create'|trans }}&nbsp;&nbsp;" />
+  </div>
+  {{ form_end(form) }}
 {% endblock %}
