--- a/app/Resources/views/results.html.twig
+++ b/app/Resources/views/results.html.twig
@@ -26,9 +26,7 @@
   <div class="row">
     <div class="col-md-12">
       <h2>Resultats pour la recherche: <i>{{ q }}</i></h2>
-      <div class="row">
-        <h4>Par Titre :</h4>
-        <hr>
+      <div class="jumbotron">
         {% for serie in series %}
           <a class="" href="{{ path('serie_show', { 'id': serie.id }) }}">
             <div class="container col-lg-3 col-sm-4 col-xs-6">
@@ -37,28 +35,24 @@
             </div>
           </a>
         {% endfor %}
-      </div>
-      <div class="row">
-        <h4>Par Episode :</h4>
-        <hr>
+
         {% for episode in episodes %}
           {% if episode.serie %}
           <a class="" href="{{ path('episode_show', { 'id': episode.id }) }}">
             <div class="container col-lg-3 col-sm-4 col-xs-6">
                 <h2 class="titre-serie">{{ episode.serie.title }}</h2><h3>{{ episode.title }}</h3>
+                <img class="img-responsive img-film-galerie" src="{{ asset(episode.serie.getPicture()) }}" alt="">
             </div>
           </a>
           {% endif %}
         {% endfor %}
-      </div>
-      <div class="row">
-        <h4>Par Acteurs :</h4>
-        <hr>
-        {% for episode in episodes %}
-          {% if episode.serie %}
-          <a class="" href="{{ path('episode_show', { 'id': episode.id }) }}">
+
+        {% for actor in actors %}
+          {% if actor.serie %}
+          <a class="" href="{{ path('actor_show', { 'id': actor.id }) }}">
             <div class="container col-lg-3 col-sm-4 col-xs-6">
-                <h2 class="titre-serie">{{ episode.serie.title }}</h2><h3>{{ episode.title }}</h3>
+                <h2 class="titre-serie">{{ actor.serie.title }}</h2><h3>{{ actor.title }}</h3>
+                <img class="img-responsive img-film-galerie" src="{{ asset(actor.getPicture()) }}" alt="">
             </div>
           </a>
           {% endif %}
