--- a/app/Resources/views/serie/new.html.twig
+++ b/app/Resources/views/serie/new.html.twig
@@ -1,16 +1,71 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-    <h1>Serie creation</h1>
+{% block panel %} <!-- surcharge du block panel gauche -->
+  <ul class="nav nav-pills nav-stacked mt22p">
+    <li class="active">
+      <a href="/">{{ 'serie.show.home'|trans }}</a>
+    </li>
+    <li>
+      <a data-toggle="tab" href="{{ path('serie_index') }}">{{ 'serie.show.back_list'|trans }}</a>
+    </li>
+  </ul>
+{% endblock %}
 
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+{% block body %}
+    <h1>{{ 'serie.new.new'|trans }}</h1>
+    <hr>
+    {{ form_start(form, {'method': 'post', 'action': path('serie_new'), 'attr': {'class': 'form'}}) }}
+    <div class="form-group">
+      <label for="title" class="control-label col-sm-2">{{ 'serie.new.title'|trans }}</label>
+      <div class="col-sm-10 mb20p">
+        {{ form_widget(form.title, {'attr': {'class': 'form-control input-sm'}}) }}
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="resume" class="control-label col-sm-2">{{ 'serie.new.resume'|trans }}</label>
+      <div class="col-sm-10 mb20p">
+        {{ form_widget(form.resume, {'attr': {'class': 'form-control input-sm'}}) }}
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="season" class="control-label col-sm-2">{{ 'serie.new.number_of_season'|trans }}</label>
+      <div class="col-sm-10 mb20p">
+        {{ form_widget(form.season, {'attr': {'class': 'form-control input-sm'}}) }}
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="status" class="control-label col-sm-2">Status</label>
+      <div class="col-sm-10 mb20p">
+        {{ form_widget(form.status, {'attr': {'class': 'form-control input-sm'}}) }}
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="nationality" class="control-label col-sm-2">{{ 'serie.new.nationality'|trans }}</label>
+      <div class="col-sm-10 mb20p">
+        {{ form_widget(form.nationality, {'attr': {'class': 'form-control input-sm'}}) }}
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="director" class="control-label col-sm-2">{{ 'serie.new.director'|trans }}</label>
+      <div class="col-sm-10 mb20p">
+        {{ form_widget(form.director, {'attr': {'class': 'form-control input-sm'}}) }}
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="actors" class="control-label col-sm-2">{{ 'serie.new.actors'|trans }}</label>
+      <div class="col-sm-10 mb20p">
+        {{ form_widget(form.actors, {'attr': {'class': 'form-control input-sm'}}) }}
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="picture" class="control-label col-sm-2">{{ 'serie.new.picture'|trans }}</label>
+      <div class="col-sm-10 mb20p">
+        <p>{{ 'serie.new.file'|trans }}</p>
+        {{ form_widget(form.picture, {'attr': {'class': 'file'}}) }}
+      </div>
+    </div>
+      {{ form_widget(form) }}
+      <input type="submit" class="flt-r" value="&nbsp;&nbsp;{{ 'serie.new.create'|trans }}&nbsp;&nbsp;" />
     {{ form_end(form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('serie_index') }}">Back to the list</a>
-        </li>
-    </ul>
 {% endblock %}
