--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -1,6 +1,7 @@
 .logo {
 	width: 179px;
 }
+
 nav {
 	margin:0;
 	padding-right:15px;
@@ -24,6 +25,12 @@ ul li {
 }
 .mt30p {
 	margin-top:30px;
+}
+.mt22p {
+	margin-top:22px;
+}
+.mb20p {
+	margin-bottom: 20px;
 }
 .navbar-toggle {
 	margin-right: 0;
@@ -57,7 +64,7 @@ ul li {
 	background-color: transparent;
 }
 @media (max-width: 480px)
-{	
+{
 	.logo {
 		width: 138px;
 	}
