--- a/web/css/formModal.css
+++ b/web/css/formModal.css
@@ -11,16 +11,14 @@ body {
 	background: #ffffff;
 }
 
-
-
 .user-modal {
   position: fixed;
-  top: 0;
+  top: 20px;
   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.3);
-  z-index: 3;
+  z-index: 1000;
   overflow-y: auto;
   cursor: pointer;
   visibility: hidden;
@@ -46,7 +44,7 @@ body {
   background: #FFF;
   margin: 3em auto 4em;
   cursor: auto;
-  
+
   -webkit-transform: translateY(-30px);
   transform: translateY(-30px);
   -webkit-transition-property: -webkit-transform;
@@ -146,7 +144,7 @@ body {
 .form input {
   margin: 0;
   padding: 0;
-  
+
 }
 .form input.full-width {
   width: 100%;
@@ -233,7 +231,7 @@ body {
   color: #FFF;
   font-size: 13px;
   font-size: 0.8125rem;
-  
+
   /* prevent click and touch events */
   pointer-events: none;
   visibility: hidden;
@@ -452,7 +450,7 @@ body {
   font-family: 'Arial';
   font-size: 0.8em;
   color:#444444;
-border:1px solid #666666;
+  border:1px solid #666666;
   width: 500px;
   height: 50px;
 }
@@ -461,7 +459,7 @@ border:1px solid #666666;
   font-family: 'Arial';
   font-size: 0.8em;
   color:#444444;
-border:1px solid #666666;
+  border:1px solid #666666;
   width: 500px;
   height: 50px;
 }
