--- a/app/Resources/views/serie/show.html.twig
+++ b/app/Resources/views/serie/show.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block panel %} <!-- surcharge du block panel gauche -->
-  <ul class="nav nav-pills nav-stacked">
+  <ul class="nav nav-pills nav-stacked white">
     <li class="active">
-      <a href="/">{{ 'serie.show.home'|trans }}</a>
+      <a class="introfont blue" href="/">{{ 'serie.show.home'|trans }}</a>
     </li>
     <li>
       <a data-toggle="tab" href="{{ path('serie_index') }}">{{ 'serie.show.back_list'|trans }}</a>
@@ -13,20 +13,20 @@
 
 {% block side_content %}
   {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-  <div class="panel panel-default">
-    <div class="panel-heading">Administration</div>
-    <div class="panel-body">
+  <div class="panel panel-default green">
+    <div class="panel-heading"><h5 class="introfont">Administration</h5></div>
+    <div class="panel-body white">
       <div class="col-md-12">
-        <div class="row">
+        <div class="row grey-txt">
           <a href="{{ path('serie_edit', { 'id': serie.id }) }}">{{ 'serie.show.edit'|trans }}</a>
         </div>
-        <div class="row">
+        <div class="row grey-txt">
           <a href="{{ path('episode_new', { 'id': serie.id }) }}">{{ 'serie.show.add_episode'|trans }}</a>
         </div>
         <div class="row">
         {% if is_granted("ROLE_ADMIN") %}
           {{ form_start(delete_form) }}
-            <button type="submit" id="delete" class="btn btn-xs btn-danger"><i class='fa fa-exclamation-triangle' aria-hidden='true'></i> {{ 'serie.show.delete'|trans }}</button>
+            <button type="submit" id="delete" class="btn btn-xs btn-danger mt22p"><i class='fa fa-exclamation-triangle' aria-hidden='true'></i> {{ 'serie.show.delete'|trans }}</button>
           {{ form_end(delete_form) }}
         {% endif %}
         </div>
@@ -36,20 +36,21 @@
   {% endif %}
 {% endblock %}
 
-{% block body %} <!-- contenu -->
-  <div class="row">
+{% block body %}
+<div class="p20p30p">
+  <div class="row"><!-- contenu -->
     <div class="col-xs-12 col-sm-6 col-md-4">
       <img src="{{ asset(serie.getPicture()) }}" class="poster" />
     </div>
     <div class="col-xs-12  col-sm-4 col-md-6">
-      <h1>{{ serie.title }}</h1>
+      <h1 class="up-case grey-txt">{{ serie.title }}</h1>
       {{ render( controller( "IdeatoStarRatingBundle:StarRating:displayRate", { contentId: serie.id, contentType: 'Serie' }) ) }} <!-- Star Rating ! -->
-      <h3>Synopsis</h3>
+      <h3 class="grey-txt">Synopsis</h3>
       <p>{{ serie.resume }}</p>
     </div>
     <div class="col-xs-12 col-md-2 text-right">
       {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-        <button id="follow" class="btn btn-primary btn-sm"></button>
+        <button id="follow" class="btn btn-sm orange no-border"></button>
       {% endif %}
     </div>
   </div>
@@ -64,7 +65,7 @@
       </ul>
 
       <div class="tab-content mt30p"> <!--  -->
-        <div id="description" class="tab-pane fade in active">
+        <div id="description" class="tab-pane fade in active lght-grey-txt">
           <p>Status:</p>
           <p>{{ 'serie.show.nationality'|trans }}:</p>
           <p>{{ 'serie.show.number_of_season'|trans }}: {{ serie.season }}</p>
@@ -86,7 +87,6 @@
         {% endfor %}
       </div>
     </div>
-  </div>
 
   <div class="col-sm-12 jumbotron mt30p">
     {% stylesheets 'css/comments.css' %}
@@ -97,6 +97,8 @@
     {% endif %}
     {% include 'FOSCommentBundle:Thread:async.html.twig' with {'id': serie.id } %} <!-- affichage des commentaires et du formulaire -->
   </div>
+</div>
+</div>
 
       <!-- chargement du JS -->
       {% javascripts
