--- a/app/Resources/views/Default/index.html.twig
+++ b/app/Resources/views/Default/index.html.twig
@@ -1,86 +1,103 @@
 {% extends 'base.html.twig' %}
 
 {% block carousel %}
-
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-      Indicators
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img class="first-slide" src="{{ asset('img/imgCarousel/got2.jpg') }}" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption ">
-              <h1 class="IntroFontCarousel">Game of Thrones.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-carousel" href="#" role="button">En savoir plus</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img class="second-slide" src="{{ asset('img/imgCarousel/mrr2.jpg') }}" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption ">
-              <h1 class="IntroFontCarousel">Mr Robot.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-carousel" href="#" role="button">En savoir plus</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img class="third-slide" src="{{ asset('img/imgCarousel/breakingBad2.jpg') }}" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption ">
-              <h1 class="IntroFontCarousel">Breaking Bad</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-carousel" href="#" role="button">En savoir plus</a></p>
-            </div>
-          </div>
-        </div>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img class="hidden-xs visible-sm visible-md visible-lg"  src="{{ asset('img/imgCarousel/got2.jpg') }}" alt="got">
+        <img class="hidden-lg hidden-md hidden-sm visible-xs posterH"  src="{{ asset('img/imgCarousel/gotPoster.jpg') }}" alt="gotPoster">
       </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div><!-- /.carousel -->
-    {% endblock %}
+      <div class="item">
+        <img class="hidden-xs visible-sm visible-md visible-lg"  src="{{ asset('img/imgCarousel/breakingBad2.jpg') }}" alt="breakingBad">
+        <img class="hidden-lg hidden-md hidden-sm visible-xs posterH "  src="{{ asset('img/imgCarousel/breakingBadPoster.jpg') }}" alt="breakingBadPoster">
+      </div>
+      <div class="item">
+        <img class="hidden-xs visible-sm visible-md visible-lg"  src="{{ asset('img/imgCarousel/mrr2.jpg') }}" alt="mrRobot">
+        <img class="hidden-lg hidden-md hidden-sm visible-xs posterH"  src="{{ asset('img/imgCarousel/mrRobotPoster.jpg') }}" alt="mrRobotPoster">
+      </div>
+      <div class="item">
+        <img class="hidden-xs visible-sm visible-md visible-lg"  src="{{ asset('img/imgCarousel/jJones.jpg') }}" alt="jJones">
+        <img class="hidden-lg hidden-md hidden-sm visible-xs posterH"  src="{{ asset('img/imgCarousel/jJonesPoster.jpg') }}" alt="jJonesPoster">
+      </div>
+    </div>
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div><!-- /.carousel -->
+{% endblock carousel %}
 
 
 {% block panel %}
-<h3>{{ 'index.news'|trans }}</h3>
+  <div class="panel panel-default blue">
+    <div class="panel-heading"><h4 class="introfont">{{ 'index.news'|trans }}</h4></div>
+    <div class="panel-body white">
+      <h3>HBO veut mettre fin au piratage</h3>
+      <p>
+        Confrontée au téléchargement illégal massif de sa série phare, la chaîne câblée américaine HBO tente d'organiser
+        la contre-attaque. Et s'apprête à prendre des "mesures extrêmes" pour stopper le piratage de Game of Thrones
+        et arrêter les contrevenants...<a href="#">En savoir plus</a>
+      </p>
+      <h3>Game of Thrones : on a vu l'épisode 4 !</h3>
+      <p>
+        Après "The Red Woman" et "Home", dont la fin n'a pas laissé grand monde indifférent, la saison 6 de Game of Thrones
+        se poursuit avec "Oathbreaker" (que l'on peut traduire par "Le Briseur de serments").
+        Diffusé sur la chaîne câblée HBO, mais est également proposé en H+24 sur OCS City,
+        on débriefe avec vous cet épisode 3....<a href="#">En savoir plus</a>
+      </p>
+      <h3>Aviez-vous remarqué ?</h3>
+      <p>
+        Aviez-vous remarqué ? Les petits détails cachés de House of Cards
+        Les petits détails des plus grands films et séries, c'est dans "Aviez-vous remarqué ?",
+        votre nouveau rendez-vous vidéo sur AlloCiné. ....<a href="#">En savoir plus</a>
+      </p>
+
+    </div>
+  </div>
+
 {% endblock %}
 
 
 {% block body %}
-<h1>Top 5</h1>
-<hr>
-{% for serie in series %}
-  <a class="" href="{{ path('serie_show', { 'id': serie.id }) }}">
-    <div class="container col-lg-3 col-sm-4 col-xs-6">
-        <h2 class="titre-serie">{{ serie.title }}</h2>
-        <img class="img-responsive img-film-galerie" src="{{ asset(serie.getPicture()) }}" alt="poster">
+  <div class="panel panel-default orange">
+    <div class="panel-heading" style="position:relative;margin:0 -15px"><h4 class="introfont">Vos series preferées</h4></div>
+    <div class="panel-body white">
+      {% for serie in series %}
+        <a class="" href="{{ path('serie_show', { 'id': serie.id }) }}">
+          <div class="col-sm-3 series-title">
+              <h3 class="">{{ serie.title }}</h3>
+              <img class="img-responsive" src="{{ asset(serie.getPicture()) }}" alt="poster">
+          </div>
+        </a>
+      {% endfor %}
     </div>
-  </a>
-{% endfor %}
+  </div>
 {% endblock %}
 
 
 {% block side_content %}
-    <h3><h3>{{ 'index.commentaires'|trans }}</h3>
-    {% for comment in comments %}
-      <p>
-        {{ comment.getAuthorName() }} {{ 'index.on'|trans }} {{ render(controller('FilRougeBundle:Default:getTitle', { id: comment.thread.id }) ) }}
-
-      </p>
-      <p>
-        {{ comment.getBody() }}
-      </p>
-    {% endfor %}
+  <div class="panel panel-default green">
+    <div class="panel-heading"><h4 class="introfont">{{ 'index.commentaires'|trans }}</h4></div>
+    <div class="panel-body white">
+      {% for comment in comments %}
+        <div class="col-sm-3"><img src="{{ comment.author.getPicture() }}" alt="" class="avatar-comment"/></div>
+        <div class="col-sm-9">
+          <h4><a href="{{ path('fos_user_profile_show', { 'id': comment.author.getId() }) }}">{{ comment.getAuthorName() }}</a> {{ 'index.on'|trans }} {{ render(controller('FilRougeBundle:Default:getTitle', { id: comment.thread.id }) ) }}</h4>
+          <p>
+            {{ comment.getBody() }}
+          </p>
+        </div>
+      {% endfor %}
+    </div>
+  </div>
 {% endblock %}
