--- a/app/Resources/views/results.html.twig
+++ b/app/Resources/views/results.html.twig
@@ -1,62 +1,51 @@
 {% extends 'base.html.twig' %}
 
-{% block panel %} <!-- surcharge du block panel gauche -->
-  <ul class="nav nav-pills nav-stacked">
-    <li class="active">
-      <a href="/">{{ 'episode.show.home'|trans }}</a>
-    </li>
-    <li>
-      <a data-toggle="tab" href="{{ path('serie_index') }}">{{ 'episode.show.back_serie'|trans }}</a>
-    </li>
-  </ul>
+{% block body %}<!-- contenu -->
 {% endblock %}
 
-{% block side_content %} <!-- surcharge du block side_content droit -->
-  <div class="panel panel-default">
-    <div class="panel-heading">Adminitration</div>
-    <div class="panel-body">
-      <div class="col-md-12">
-
+{% block list %}
+<div class="container">
+  <div class="p20p30p white">
+    <form action="/search/results" method="get" class="ui-widget form-inline">
+      <div id="search_bar">
+        <label for="tags"></label>
+        <input id="tags" class="col-md-8 col-md-push-2 col-xs-10 search-bar" name="q" placeholder="Search..." />
+        <button type="submit" class="col-md-4 col-xs-2 search-button"><i class="fa fa-search" aria-hidden="true"></i></button>
       </div>
-    </div>
-  </div>
-{% endblock %}
-
-{% block body %} <!-- contenu -->
-  <div class="row">
+    </form>
     <div class="col-md-12">
       <h2>{{ 'result.request'|trans }}: <i>{{ q }}</i></h2>
-      <div class="jumbotron">
         {% for serie in series %}
           <a class="" href="{{ path('serie_show', { 'id': serie.id }) }}">
-            <div class="container col-lg-3 col-sm-4 col-xs-6">
+            <div class="container col-lg-2 col-sm-3 col-xs-4">
                 <h2 class="titre-serie">{{ serie.title }}</h2>
-                <img class="img-responsive img-film-galerie" src="{{ asset(serie.getPicture()) }}" alt="">
+                <img class="img-responsive" src="{{ asset(serie.getPicture()) }}" alt="">
             </div>
           </a>
+        {% endfor %}
+
+        {% for actor in actors %}
+          {% if actor %}
+          <a class="" href="{{ path('serie_show', { 'id': actor.id }) }}">
+            <div class="container col-lg-2 col-sm-3 col-xs-4">
+              <h2 class="titre-serie">{{ actor.title }}</h2>
+              <img class="img-responsive" src="{{ asset(actor.getPicture()) }}" alt="">
+            </div>
+          </a>
+          {% endif %}
         {% endfor %}
 
         {% for episode in episodes %}
           {% if episode.serie %}
           <a class="" href="{{ path('episode_show', { 'id': episode.id }) }}">
-            <div class="container col-lg-3 col-sm-4 col-xs-6">
+            <div class="container col-lg-2 col-sm-3 col-xs-4">
                 <h2 class="titre-serie">{{ episode.serie.title }}</h2><h3>{{ episode.title }}</h3>
-                <img class="img-responsive img-film-galerie" src="{{ asset(episode.serie.getPicture()) }}" alt="">
+                <img class="img-responsive" src="{{ asset(episode.serie.getPicture()) }}" alt="">
             </div>
           </a>
           {% endif %}
         {% endfor %}
 
-        {% for actor in actors %}
-          {% if actor.serie %}
-          <a class="" href="{{ path('actor_show', { 'id': actor.id }) }}">
-            <div class="container col-lg-3 col-sm-4 col-xs-6">
-                <h2 class="titre-serie">{{ actor.serie.title }}</h2><h3>{{ actor.title }}</h3>
-                <img class="img-responsive img-film-galerie" src="{{ asset(actor.getPicture()) }}" alt="">
-            </div>
-          </a>
-          {% endif %}
-        {% endfor %}
       </div>
     </div>
   </div>
