--- a/app/Resources/views/serie/index.html.twig
+++ b/app/Resources/views/serie/index.html.twig
@@ -1,17 +1,20 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+{% endblock %}
+{% block list %}
+<div class="container white p20p30p">
   <div class="row">
-      <div class="col-lg-10">
-          <h1 class="page-header">Serie list ({{ pagination.getTotalItemCount }})</h1>
-      </div>
+    <div class="col-md-12">
+      <h1 class="green-txt up-case">Serie list ({{ pagination.getTotalItemCount }})</h1>
+    </div>
   </div>
   <div class="row">
   {% for s in pagination %}
     <a class="" href="{{ path('serie_show', { 'id': s.id }) }}">
-      <div class="container col-lg-3 col-sm-4 col-xs-6">
-        <h2 class="titre-serie">{{ s.title }}</h2>
-        <img class="img-responsive img-film-galerie" src="{{ asset(s.getPicture()) }}" alt="">
+      <div class="col-lg-3 col-sm-4 col-xs-6">
+        <h2 class="series-title up-case">{{ s.title }}</h2>
+        <img class="img-responsive" src="{{ asset(s.getPicture()) }}" alt="">
       </div>
     </a>
   {% endfor %}
@@ -21,4 +24,5 @@
       {{ knp_pagination_render(pagination) }}
     </div>
   </div>
-{% endblock %}
+</div>
+{% endblock list %}
