--- a/app/Resources/views/serie/new.html.twig
+++ b/app/Resources/views/serie/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block panel %} <!-- surcharge du block panel gauche -->
-  <ul class="nav nav-pills nav-stacked mt22p">
+  <ul class="nav nav-pills nav-stacked">
     <li class="active">
       <a href="/">{{ 'serie.show.home'|trans }}</a>
     </li>
@@ -12,9 +12,10 @@
 {% endblock %}
 
 {% block body %}
-    <h1>{{ 'serie.new.new'|trans }}</h1>
-    <hr>
-    {{ form_start(form, {'method': 'post', 'action': path('serie_new'), 'attr': {'class': 'form'}}) }}
+
+<div class="p20p30p">
+  <h1>{{ 'serie.new.new'|trans }}</h1>
+  {{ form_start(form, {'method': 'post', 'action': path('serie_new'), 'attr': {'class': 'form'}}) }}
     <div class="form-group">
       <label for="title" class="control-label col-sm-2">{{ 'serie.new.title'|trans }}</label>
       <div class="col-sm-10 mb20p">
@@ -64,8 +65,9 @@
         {{ form_widget(form.picture, {'attr': {'class': 'file'}}) }}
       </div>
     </div>
-      {{ form_widget(form) }}
-      <input type="submit" class="flt-r" value="&nbsp;&nbsp;{{ 'serie.new.create'|trans }}&nbsp;&nbsp;" />
-    {{ form_end(form) }}
+    {{ form_widget(form) }}
+    <input type="submit" class="btn blue mb20p flt-r" value="&nbsp;&nbsp;{{ 'serie.new.create'|trans }}&nbsp;&nbsp;" />
+  {{ form_end(form) }}
+</div>
 
 {% endblock %}
