--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -1,7 +1,7 @@
+
 .logo {
 	width: 179px;
 }
-
 nav {
 	margin:0;
 	padding-right:15px;
@@ -19,6 +19,10 @@ ul li {
 .avatar {
 	width:30px;
 	border-radius:30px;
+}
+.avatar-comment {
+	width:50px;
+	border-radius:50px;
 }
 .poster {
 	max-width:100%;
@@ -75,8 +79,6 @@ ul li {
 	background-color: transparent;
 }
 footer {
-	position: absolute;;
-	bottom: 0;
 }
 @media (max-width: 480px)
 {
